# sensor-fusion-workshop

./: .gitignore  README.md  pyproject.toml
1_bayes_filter/: bayes_filter.py  main.py  simulation.py
2_kalman_filter/: filter.py  main.py  simulation.py
3_ekf/: aekf.py  aekf_filter.py  main.py  mekf.py  simulation.py
